# lrts

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/ollama/: .lrts.yml
examples/ollama/datasets/: qa.jsonl
examples/ollama/prompts/: v1.txt  v2.txt
lrts/: __init__.py  cli.py  config.py  config_file.py  db.py  main.py
lrts/api/: datasets.py  prompts.py  runs.py
lrts/engines/: __init__.py  diff.py  html_report.py  orchestrator.py  report.py  runner.py
lrts/examples/: demo_data.py  demo_dataset.jsonl
lrts/models/: __init__.py  cache.py  dataset.py  prompt.py  run.py
lrts/providers/: __init__.py  anthropic.py  base.py  openai_compat.py  registry.py
tests/: test_cache.py  test_config_file.py  test_diff.py
